Update link for Teachers Day gallery

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <!-- Folder 3 -->
     <div class="gallery-folder">
-      <a href="gallery/teachers-day-2025.html">
+      <a href="gallery/teachersday.html">
         <img src="images/TDAY.png" alt="Teachers Day 2025" width="400" height="300">
         <h3>Teachers Day 2025</h3>
       </a>
