Replace TDAY.jpg with TDAY.png in teachersday.html

--- a/gallery/teachersday.html
+++ b/gallery/teachersday.html
@@ -13,7 +13,7 @@
   </header>
 
   <section class="gallery">
-    <img src="../images/TDAY.jpg" alt="Flag Hoisting" width="400" height="300">
+    <img src="../images/TDAY.png" alt="Flag Hoisting" width="400" height="300">
     <img src="../images/indipen.png" alt="Independence Day" width="400" height="300">
     <img src="../images/the g.png" alt="Cultural Program" width="400" height="300">
   </section>
