Add Annual Function 2025 gallery section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,15 @@
         <h3>Teachers Day 2025</h3>
       </a>
     </div>
+
+
+    <!-- Folder 4 -->
+    <div class="gallery-folder">
+      <a href="gallery/Annual Function.html">
+        <img src="images/a1.jpg" alt="15th August 2025" width="400" height="300">
+        <h3>Annual Function 2025 </h3>
+      </a>
+    </div>
   </div>
 </section>
 
