Update title and images for Annual Function page

--- a/gallery/Annual Function.html
+++ b/gallery/Annual Function.html
@@ -3,19 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>15th August 2025 | Gallery</title>
+  <title>Annual Function  Gallery</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
-    <h1>15th August 2025 Celebration</h1>
+    <h1>Annual Function</h1>
     <a href="../index.html#gallery" style="color:#ffd700;">← Back to Gallery</a>
   </header>
 
   <section class="gallery">
-    <img src="../images/TDAY.png" alt="teachers day celebration" width="400" height="300">
-    <img src="../images/indipen.png" alt="Independence Day" width="400" height="300">
-    <img src="../images/the g.png" alt="Cultural Program" width="400" height="300">
+    <img src="../images/a1.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a2.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a3.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a4.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a5.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a6.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a7.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a8.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a9.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a10.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a11.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a12.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a13.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a14.jpg" alt="Annual Function" width="400" height="300">
+    
   </section>
 
   <footer>
