Duplicate image entry for Annual Function

--- a/gallery/Annual Function.html
+++ b/gallery/Annual Function.html
@@ -14,6 +14,7 @@
 
   <section class="gallery">
     <img src="../images/a1.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a1.jpg" alt="Annual Function" width="400" height="300">
     <img src="../images/a2.jpg" alt="Annual Function" width="400" height="300">
     <img src="../images/a3.jpg" alt="Annual Function" width="400" height="300">
     <img src="../images/a4.jpg" alt="Annual Function" width="400" height="300">
