Remove duplicate image entries in Annual Function

--- a/gallery/Annual Function.html
+++ b/gallery/Annual Function.html
@@ -13,21 +13,20 @@
   </header>
 
   <section class="gallery">
-    <img src="../images/a1.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a1.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a2.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a3.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a4.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a5.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a6.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a7.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a8.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a9.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a10.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a11.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a12.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a13.jpg" alt="Annual Function" width="400" height="300">
-    <img src="../images/a14.jpg" alt="Annual Function" width="400" height="300">
+    <img src="../images/a1.jpg"  width="400" height="300">
+    <img src="../images/a2.jpg"  width="400" height="300">
+    <img src="../images/a3.jpg"  width="400" height="300">
+    <img src="../images/a4.jpg"  width="400" height="300">
+    <img src="../images/a5.jpg"  width="400" height="300">
+    <img src="../images/a6.jpg"  width="400" height="300">
+    <img src="../images/a7.jpg"  width="400" height="300">
+    <img src="../images/a8.jpg"  width="400" height="300">
+    <img src="../images/a9.jpg"  width="400" height="300">
+    <img src="../images/a10.jpg"  width="400" height="300">
+    <img src="../images/a11.jpg"  width="400" height="300">
+    <img src="../images/a12.jpg"  width="400" height="300">
+    <img src="../images/a13.jpg"  width="400" height="300">
+    <img src="../images/a14.jpg"  width="400" height="300">
     
   </section>
 
