--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
     <!-- Folder 4 -->
     <div class="gallery-folder">
       <a href="gallery/Annual Function.html">
-        <img src="images/a1.jpg" alt="15th August 2025" width="400" height="300">
-        <h3>Annual Function 2025 </h3>
+        <img src="images/a1.jpg" alt="Annual Function 2025" width="400" height="300">
+        
       </a>
     </div>
   </div>
