Fix HTML structure for Annual Function link

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div class="gallery-folder">
       <a href="gallery/Annual Function.html">
         <img src="images/a1.jpg" alt="Annual Function 2025" width="400" height="300">
-        
+        <h3>Annual Function 2025</h3>
       </a>
     </div>
   </div>
