Remove lightbox from index.html
Removed lightbox div from the contact section.

--- a/index.html
+++ b/index.html
@@ -227,11 +227,7 @@
   </div>
 </section>
 
-
-<div id="lightbox">
-  <span id="close">&times;</span>
-  <img id="lightbox-img" src="" alt="Expanded view">
-</div>
+<!-- contact section -->
 
 <section id="contact">
   <h2>Contact</h2>
