Fix link to admission form PDF file

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="notice-board">
       <ul>
         <li>🎉 Annual Function Invitation Card is live Now .<a href="images/invitation card.jpg" target="_blank">[Download]</a></li>
-        <li>📢 Admission forms  are available . <a href="pdfs/admission-form.pdf" target="_blank">[Download PDF]</a></li>
+        <li>📢 Admission forms  are available . <a href="pdfs/Admission form.pdf" target="Admission form.pdf">[Download PDF]</a></li>
       <!--  <li>🏆 Sports Day scheduled for 20th Oct 2025. <a href="pdfs/sports-day.pdf" target="_blank">[View]</a></li>
         <li>📚 Parent-Teacher meeting on 5th Nov 2025. <a href="pdfs/parent-meet.pdf" target="_blank">[Details]</a></li>
         -->
