--- a/gallery/teachersday.html
+++ b/gallery/teachersday.html
@@ -14,7 +14,7 @@
 
   <section class="gallery">
     <img src="../images/TDAY.png" alt="teachers day celebration" width="400" height="300">
-    <img src="../images/indipen.png" alt="Independence Day" width="400" height="300">
+    <img src="../images/teachersday/1.jpg" width="400" height="300">
     <img src="../images/the g.png" alt="Cultural Program" width="400" height="300">
   </section>
 
