Update Teachers' Day gallery with more images
Added additional images for Teachers' Day celebration.

--- a/gallery/teachersday.html
+++ b/gallery/teachersday.html
@@ -15,7 +15,11 @@
   <section class="gallery">
     <img src="../images/TDAY.png" alt="teachers day celebration" width="400" height="300">
     <img src="../images/teachersday/1.jpg" width="400" height="300">
-    <img src="../images/the g.png" alt="Cultural Program" width="400" height="300">
+    <img src="../images/teachersday/2.jpg" width="400" height="300">
+    <img src="../images/teachersday/3.jpg" width="400" height="300">
+    <img src="../images/teachersday/4.jpg" width="400" height="300">
+    <img src="../images/teachersday/5.jpg" width="400" height="300">
+    <img src="../images/teachersday/6.jpg" width="400" height="300">
   </section>
 
   <footer>
