--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
       <li>🎉 Annual Function Invitation Card is live Now. 
         <a href="images/invitation card.jpg" target="_blank">[View]</a>
       </li>
-      <li> Admission Notification Is Live Now. <a href="pdfs/admission notification.jpg" target="_blank">[View]
+      <li> 📚 Admission Notification Is Live Now. <a href="pdfs/admission notification.jpg" target="_blank">[View]
       </a></li>
 
       <!-- Download directly -->
-      <li>📢 DOWNLOAD ADMISSION FORM  (SEASON2026) 
+      <li>📢 DOWNLOAD ADMISSION FORM  (SEASON 2026) 
         <a href="#" onclick="downloadFile('pdfs/Admission form.pdf')">[Download PDF]</a>
       </li>
     </ul>
