Update link for Raksha Bandhan gallery

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ function downloadFile(filePath) {
 
     <!-- Folder 2 -->
     <div class="gallery-folder">
-      <a href="gallery/raksha-bandhan-2025.html">
+      <a href="gallery/RAKSHA BANDHAN.html">
         <img src="images/raksha3.png" alt="Raksha Bandhan 2025" width="400" height="300">
         <h3>Raksha Bandhan 2025</h3>
       </a>
