Add designer and developer credits to footer
Added designer and developer credits with links to LinkedIn and GitHub.

--- a/gallery/15-aug-2025.html
+++ b/gallery/15-aug-2025.html
@@ -20,6 +20,11 @@
 
   <footer>
     <p>&copy; 2025 Rupa Saraswati Sishu Mandir</p>
+     <p>
+    Designed & Developed by Avijit Barman
+    <a href="https://www.linkedin.com/in/avijit-barman-584525260/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/avijitbarman" target="_blank"><i class="fab fa-github"></i></a>
+  </p>
   </footer>
   <!-- Lightbox Popup -->
 <div id="lightbox" class="lightbox">
