--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ function downloadFile(filePath) {
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Address: 9F83+RQH, Kapasgerya, West Bengal 721149</p>
+  <p>Address: Kapasgerya,Madpur , Paschim Medinipur , West Bengal 721149</p>
   <p>Phone: +91-9647090787</p>
 
   <form id="contact-form">
