--- a/gallery/15-aug-2025.html
+++ b/gallery/15-aug-2025.html
@@ -55,10 +55,7 @@
       lightbox.style.display = 'none';
     }
   });
+</script>
 
-
-   
-     
-<script src="script.js"></script>
 </body>
 </html>
