--- a/gallery/15-aug-2025.html
+++ b/gallery/15-aug-2025.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>15th August 2025 Celebration</h1>
-    <a href="../index.html#gallery" style="color:#ffd700;">← Back to Gallery</a>
+    <a href="../index.html#gallery" style="color:#ffd700;">⬅️ Back to Gallery</a>
   </header>
 
   <section class="gallery">
